// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ingredients list reducer should handle GET_INGREDIENTS_ERROR 1`] = `
Object {
  "ingredients": Array [],
  "isLoading": false,
  "loadError": "Get ingredients error",
}
`;

exports[`ingredients list reducer should handle GET_INGREDIENTS_REQUEST 1`] = `
Object {
  "ingredients": Array [],
  "isLoading": true,
  "loadError": null,
}
`;

exports[`ingredients list reducer should handle GET_INGREDIENTS_SUCCESS 1`] = `
Object {
  "ingredients": Array [
    Object {
      "calories": 420,
      "carbohydrates": 53,
      "fat": 24,
      "id": "60d3b41abdacab0026a733c6",
      "image": "https://code.s3.yandex.net/react/code/bun-02.png",
      "imageLarge": "https://code.s3.yandex.net/react/code/bun-02-large.png",
      "imageMobile": "https://code.s3.yandex.net/react/code/bun-02-mobile.png",
      "name": "Краторная булка N-200i",
      "price": 1255,
      "proteins": 80,
      "type": "bun",
    },
    Object {
      "calories": 643,
      "carbohydrates": 85,
      "fat": 26,
      "id": "60d3b41abdacab0026a733c7",
      "image": "https://code.s3.yandex.net/react/code/bun-01.png",
      "imageLarge": "https://code.s3.yandex.net/react/code/bun-01-large.png",
      "imageMobile": "https://code.s3.yandex.net/react/code/bun-01-mobile.png",
      "name": "Флюоресцентная булка R2-D3",
      "price": 988,
      "proteins": 44,
      "type": "bun",
    },
    Object {
      "calories": 643,
      "carbohydrates": 85,
      "fat": 26,
      "id": "60d3b41abdacab0026a733c8",
      "image": "https://code.s3.yandex.net/react/code/meat-03.png",
      "imageLarge": "https://code.s3.yandex.net/react/code/meat-03-large.png",
      "imageMobile": "https://code.s3.yandex.net/react/code/meat-03-mobile.png",
      "name": "Филе Люминесцентного тетраодонтимформа",
      "price": 988,
      "proteins": 44,
      "type": "main",
    },
    Object {
      "calories": 30,
      "carbohydrates": 40,
      "fat": 20,
      "id": "60d3b41abdacab0026a733cc",
      "image": "https://code.s3.yandex.net/react/code/sauce-02.png",
      "imageLarge": "https://code.s3.yandex.net/react/code/sauce-02-large.png",
      "imageMobile": "https://code.s3.yandex.net/react/code/sauce-02-mobile.png",
      "name": "Соус Spicy-X",
      "price": 90,
      "proteins": 30,
      "type": "sauce",
    },
  ],
  "isLoading": false,
  "loadError": null,
}
`;

exports[`ingredients list reducer should return the initial state 1`] = `
Object {
  "ingredients": Array [],
  "isLoading": true,
  "loadError": null,
}
`;
